<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMenu"
        style="@style/ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLabel"
        style="@style/CashierText.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_products"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonMenu" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearchProducts"
        style="@style/TextInputLayout.Search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonMenu"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenu"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/cashier_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSearchProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/action_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColor="@color/cashier_search" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tilSearchProducts"
        app:layout_constraintTop_toBottomOf="@+id/tilSearchProducts"
        app:tabIndicator="@null"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/cashier_blue"
        app:tabTextColor="@color/cashier_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditCreateProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabsCategories" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditCreateProduct"
        style="@style/CashierButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/action_create_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>